fixed overflow and column bug

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,6 +1,10 @@
 @import 'variables.less';
 @import 'bootstrap-dump.less';
 /* Space out content a bit */
+* {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+}
 body {
   background: @gray;
   padding-top: 20px;
